package com.example.safekeys.utils

object TestTags {
    const val CONFIRM_PASSWORD_TEXT_FIELD = "CONFIRM_PASSWORD_TEXT_FIELD"
    const val REG_PASSWORD_TEXT_FIELD = "REG_PASSWORD_TEXT_FIELD"
    const val CREDENTIAL_DIALOGUE = "CREDENTIAL_DIALOGUE"
    const val TITLE_TEXT_FIELD = "TITLE_TEXT_FIELD"
    const val USERNAME_TEXT_FIELD = "USERNAME_TEXT_FIELD"
    const val WEBSITE_TEXT_FIELD = "WEBSITE_TEXT_FIELD"
    const val PASSWORD_TEXT_FIELD = "PASSWORD_TEXT_FIELD"
    const val CREDENTIAL_ITEM = "CREDENTIAL_ITEM"
}