package com.example.safekeys

enum class SortType {
    TITLE,
    DATE_CREATED
}