...
                    onClick = {
                        viewModel.onEvent(CredentialEvent.SaveCredential)
                    },
                    modifier = Modifier
                        .fillMaxWidth()
                        .heightIn(48.dp)
                        .semantics { contentDescription = "Save Credential" },
                    contentPadding = PaddingValues(),
                    shape = RoundedCornerShape(5.dp),
                    colors = ButtonDefaults.buttonColors(containerColor = Color.Black)
                ) {
                    Text(text = "Save")
                }
...
