...
        Column(
            modifier = Modifier
                .padding(30.dp)
                .fillMaxSize()
        ) {
            Text(
                text = "Register",
                modifier = Modifier.fillMaxWidth(),
                style = TextStyle(
                    fontSize = 37.sp,
                    fontWeight = FontWeight.Bold,
                    fontStyle = FontStyle.Normal
                ),
...
